Added anthropic_system_prompt option in the options page. See #549

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1688,5 +1688,13 @@
   "DeselectAll": {
     "message": "Deselect All",
     "description": ""
+  },
+  "Anthropic_System_Prompt": {
+    "message": "System Prompt",
+    "description": ""
+  },
+  "Anthropic_System_Prompt_Info": {
+    "message": "You can improve Claude performance by using a System Prompt to give it a role. This technique, known as role prompting, is the most powerful way to use system prompts with Claude. The right role can turn Claude from a general assistant into your virtual domain expert.",
+    "description": ""
   }
 }
