dynamic placeholder methods added. see #527

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -619,6 +619,10 @@
     "message": "Folder path",
     "description": ""
   },
+  "placeholder_mail_headers": {
+    "message": "Mail headers",
+    "description": ""
+  },
   "placeholder_selected_text": {
     "message": "Selected text",
     "description": ""
