feat(summary): add auto-summary preference for message previews
- Add new preference option to enable automatic AI summarization
- Update all localization files with new preference text
- Implement preference check in message display script
- Add default preference setting in options configuration
- Include preference toggle in options UI

This adds a user-configurable option to automatically generate and display AI summaries when viewing email messages, with appropriate warnings about data transmission to AI services.

--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1166,5 +1166,11 @@
     },
     "prefs_OptionText_get_calendar_event_Sparks_wrong_version": {
         "message": "Pro používání funkcí událostí v kalendáři a úloh, nainstalujte aktualizovanou verzi doplňku ThunderAI Sparks."
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Povolit automatické AI shrnutí pro náhledy zpráv"
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "Pokud je zaškrtnuto, ThunderAI automaticky vygeneruje a zobrazí AI shrnutí nad e-mailovými zprávami, když jsou otevřeny. Mějte na paměti, že to znamená, že všechny zprávy, které si prohlížíte, budou okamžitě odeslány do nakonfigurované AI služby."
     }
 }
