--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -187,5 +187,13 @@
     },
     "chatgpt_win_model_warning": {
         "message": "Por alguna razón, no es posible verificar si el modelo correcto está cargado. Por ahora, puedes pulsar el botón azul para continuar."
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Habilitar resumen automático de IA para vistas previas de mensajes",
+        "description": ""
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "Si está activado, ThunderAI generará y mostrará automáticamente resúmenes de IA sobre los mensajes de correo electrónico cuando se abran. Ten en cuenta que esto significa que todos los mensajes que previsualices se enviarán inmediatamente al servicio de IA configurado.",
+        "description": ""
     }
 }
