--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1314,5 +1314,13 @@
     },
     "Optional_Permission_Denied_Model_Fetching": {
         "message": "Hai negato l’autorizzazione necessaria per recuperare i modelli per questa integrazione."
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Abilita il riassunto automatico AI per le anteprime dei messaggi",
+        "description": ""
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "Se abilitata, ThunderAI genererà e mostrerà automaticamente i riassunti AI sopra le email quando vengono aperte. Nota che questo significa che tutte le email che visualizzi in anteprima verranno immediatamente inviate al servizio AI configurato.",
+        "description": ""
     }
 }
