feat(summary): add auto-summary preference for message previews
- Add new preference option to enable automatic AI summarization
- Update all localization files with new preference text
- Implement preference check in message display script
- Add default preference setting in options configuration
- Include preference toggle in options UI

This adds a user-configurable option to automatically generate and display AI summaries when viewing email messages, with appropriate warnings about data transmission to AI services.

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1303,4 +1303,29 @@
     "prefs_anthropic_temperature_Info": {
         "message": "Grad der Zufälligkeit in der Antwort. Der Standardwert ist 1,0. Der Bereich liegt zwischen 0,0 und 1,0. Verwenden Sie eine Temperatur näher an 0,0 für analytische Aufgaben oder Multiple-Choice-Fragen und näher an 1,0 für kreative und generative Aufgaben. Beachten Sie, dass die Ergebnisse selbst bei einer Temperatur von 0,0 nicht vollständig deterministisch sind."
     }
+    },
+    "customPrompts_export_include_api_settings": {
+        "message": "Do you want to include the API settings in the export? Be aware that also the API Key will be saved in the file!",
+        "description": ""
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Enable automatic AI summarization for message previews",
+        "description": ""
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "If checked, ThunderAI will automatically generate and display AI summaries above email messages when they are opened. Note that this means all messages you preview will immediately be sent to the configured AI service.",
+        "description": ""
+    },
+    "auto_summary_title": {
+        "message": "AI Summary",
+        "description": ""
+    },
+    "auto_summary_generating": {
+        "message": "Generating summary...",
+        "description": ""
+    },
+    "auto_summary_failed": {
+        "message": "Failed to generate summary",
+        "description": ""
+    }
 }
