--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1205,5 +1205,11 @@
     },
     "OpenAIComp_ClearModelsList_Confirm": {
         "message": "Вы уверены, что хотите очистить список моделей? Это действие не может быть отменено."
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Показывать автоматическое резюме в просмотре сообщений"
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "Если отмечено, резюме, сгенерированное ИИ, будет автоматически отображаться над сообщениями в просмотре."
     }
 }
