--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1287,4 +1287,29 @@
     "reset": {
         "message": "Reiniciar"
     }
+    },
+    "customPrompts_export_include_api_settings": {
+        "message": "Do you want to include the API settings in the export? Be aware that also the API Key will be saved in the file!",
+        "description": ""
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Enable automatic AI summarization for message previews",
+        "description": ""
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "If checked, ThunderAI will automatically generate and display AI summaries above email messages when they are opened. Note that this means all messages you preview will immediately be sent to the configured AI service.",
+        "description": ""
+    },
+    "auto_summary_title": {
+        "message": "AI Summary",
+        "description": ""
+    },
+    "auto_summary_generating": {
+        "message": "Generating summary...",
+        "description": ""
+    },
+    "auto_summary_failed": {
+        "message": "Failed to generate summary",
+        "description": ""
+    }
 }
