--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1685,6 +1685,14 @@
     "message": "Define the number of tokens to be used for thinking. Leave this field blank if the selected model does not support thinking or if you want to use the default method. Enter 0 to disable thinking, or -1 to enable dynamic thinking.",
     "description": ""
   },
+  "prefs_google_gemini_temperature": {
+    "message": "Temperature",
+    "description": ""
+  },
+  "prefs_google_gemini_temperature_Info": {
+    "message": "This parameter must be a number between 0.0 and 2.0. It controls the randomness of the output. The default value varies depending on the model. Leave it empty to avoid setting the parameter in the API call.",
+    "description": ""
+  },
   "SelectAll": {
     "message": "Select All",
     "description": ""
