--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1577,6 +1577,14 @@
     "message": "If checked, your chats will be stored by OpenAI.",
     "description": ""
   },
+  "prefs_chatgpt_api_temperature": {
+    "message": "Temperature",
+    "description": ""
+  },
+  "prefs_chatgpt_api_temperature_Info": {
+    "message": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.",
+    "description": ""
+  },
   "prefs_ollama_think": {
     "message": "Enable thinking",
     "description": ""
