--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1585,6 +1585,14 @@
     "message": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.",
     "description": ""
   },
+  "ollama_temperature": {
+    "message": "Temperature",
+    "description": ""
+  },
+  "ollama_temperature_Info": {
+    "message": "The temperature of the model. Increasing the temperature will make the model answer more creatively. The default value is 0.8. It is recommended to use values between 0 and 1.",
+    "description": ""
+  },
   "prefs_ollama_think": {
     "message": "Enable thinking",
     "description": ""
