--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -863,6 +863,10 @@
     "message": "Reset to default",
     "description": ""
   },
+  "reset": {
+    "message": "Reset",
+    "description": ""
+  },
   "addtags_excl_list_infoline2": {
     "message": "Add a word per line, or separated by a comma.",
     "description": ""
