--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1340,6 +1340,23 @@
         "message": "Activer le résumé automatique par IA pour les aperçus de messages"
     },
     "prefs_OptionText_auto_summary_Info": {
-        "message": "Si coché, ThunderAI générera et affichera automatiquement des résumés par IA au-dessus des messages lorsque vous les ouvrirez. Notez que cela signifie que tous les messages que vous prévisualisez seront immédiatement envoyés au service IA configuré."
+        "message": "Si coché, ThunderAI générera et affichera automatiquement des résumés par IA au-dessus des messages lorsque vous les ouvrirez. Notez que cela signifie que tous les messages que vous prévisualisez seront immédiatement envoyés au service IA configuré.",
+        "description": ""
+    },
+    "auto_summary_title": {
+        "message": "Résumé ThunderAI",
+        "description": "Titre du panneau de résumé automatique"
+    },
+    "auto_summary_generating": {
+        "message": "Génération du résumé IA...",
+        "description": "Texte de chargement affiché pendant la génération du résumé"
+    },
+    "auto_summary_failed": {
+        "message": "Échec de la génération du résumé IA. Veuillez vérifier vos paramètres et réessayer.",
+        "description": "Message d'erreur lorsque la génération du résumé échoue"
+    },
+    "auto_summary_prompt": {
+        "message": "Veuillez fournir un résumé concis du message suivant. Le résumé doit comporter au maximum 3 à 5 phrases et capturer les points principaux :\n\n",
+        "description": "Modèle d'invite pour la génération de résumés IA"
     }
 }
