--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -956,10 +956,10 @@
     "Report_Date": {
         "message": "Fecha del informe"
     },
-    "yes_string": {
+    "spamfilter_moved": {
         "message": "Si"
     },
-    "no_string": {
+    "spamfilter_not_moved": {
         "message": "No"
     },
     "context_menu_mzta-add-tags": {
@@ -967,6 +967,18 @@
     },
     "context_menu_mzta-spamfilter": {
         "message": "Analizar el spam"
+    },
+    "prefs_OptionText_add_tags_context_menu": {
+        "message": "Mostrar el elemento del menú contextual “Añadir etiquetas”"
+    },
+    "prefs_OptionText_add_tags_context_menu_Info": {
+        "message": "Si está marcado, el elemento del menú contextual “Añadir etiquetas” se mostrará al hacer clic derecho en un correo electrónico de la lista de mensajes."
+    },
+    "prefs_OptionText_spamfilter_context_menu": {
+        "message": "Mostrar el elemento del menú contextual “Analizar el spam”"
+    },
+    "prefs_OptionText_spamfilter_context_menu_Info": {
+        "message": "Si está marcado, el elemento del menú contextual “Analizar el spam” se mostrará al hacer clic derecho en un correo electrónico de la lista de mensajes."
     },
     "noActiveCalendar": {
         "message": "¡No se encontró un calendario editable!"
@@ -1006,6 +1018,12 @@
     },
     "CORS_alternative_1": {
         "message": "¿Problemas al configurar CORS?"
+    },
+    "CORS_alternative_2": {
+        "message": "Presiona el botón a continuación para otorgar el permiso <all_urls> y evitar cualquier problema de CORS."
+    },
+    "CORS_give_allurls_perm": {
+        "message": "Otorgar permiso “all URLs”"
     },
     "prefs_OptionText_composing_plain_text": {
         "message": "Redactando en texto plano"
@@ -1284,32 +1302,26 @@
     "Anthropic_System_Prompt": {
         "message": "Prompt del sistema"
     },
-    "reset": {
-        "message": "Reiniciar"
-    }
-    },
-    "customPrompts_export_include_api_settings": {
-        "message": "Do you want to include the API settings in the export? Be aware that also the API Key will be saved in the file!",
-        "description": ""
-    },
     "prefs_OptionText_auto_summary": {
-        "message": "Enable automatic AI summarization for message previews",
-        "description": ""
+        "message": "Habilitar resumen automático de IA para vistas previas de mensajes"
     },
     "prefs_OptionText_auto_summary_Info": {
-        "message": "If checked, ThunderAI will automatically generate and display AI summaries above email messages when they are opened. Note that this means all messages you preview will immediately be sent to the configured AI service.",
-        "description": ""
+        "message": "Si está marcado, ThunderAI generará y mostrará automáticamente resúmenes de IA sobre los mensajes de correo electrónico cuando se abran. Tenga en cuenta que esto significa que todos los mensajes que previsualice se enviarán inmediatamente al servicio de IA configurado."
     },
     "auto_summary_title": {
-        "message": "AI Summary",
-        "description": ""
+        "message": "Resumen de ThunderAI",
+        "description": "Título del panel de resumen automático"
     },
     "auto_summary_generating": {
-        "message": "Generating summary...",
-        "description": ""
+        "message": "Generando resumen de IA...",
+        "description": "Texto de carga mostrado mientras se genera el resumen"
     },
     "auto_summary_failed": {
-        "message": "Failed to generate summary",
-        "description": ""
+        "message": "Error al generar el resumen de IA. Verifica tu configuración e inténtalo de nuevo.",
+        "description": "Mensaje de error cuando falla la generación del resumen"
+    },
+    "auto_summary_prompt": {
+        "message": "Proporciona un resumen conciso del siguiente mensaje de correo electrónico. El resumen debe tener un máximo de 3-5 oraciones y capturar los puntos principales:\n\n",
+        "description": "Plantilla de prompt para la generación de resúmenes de IA"
     }
 }
